--- a/ts/bookfile/typescript-in-action-master/sourcecode/ts-base/.eslintrc.json
+++ b/ts/bookfile/typescript-in-action-master/sourcecode/ts-base/.eslintrc.json
@@ -1,8 +1,11 @@
 {
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint"],
+  "plugins": [
+    "@typescript-eslint"
+  ],
   "parserOptions": {
-      "project": "./tsconfig.json"
+    // todo
+    "project": "./tsconfig.json"
   },
   "extends": [
     "plugin:@typescript-eslint/recommended"
